# neonobd

./: .gitignore  Makefile.am  configure.ac  cppcheck_suppression_list  tags
.github/workflows/: build.yml  cppcheck.yml  format.yml
arch_pkg/: .gitignore  Makefile  PKGBUILD.in
src/: .clang-tidy  .gitignore  CMakeLists.txt  Makefile.am  app.gresource.xml  appstyle.css  bluetooth-serial-port.cpp  bluetooth-serial-port.h  bluetooth-serial-port.hpp  com.github.beardedone55.neonobd.gschema.xml  combobox.h  combobox.hpp  connect-button.cpp  connect-button.h  connect-button.hpp  connection.h  connection.hpp  dropdown.cpp  dropdown.hpp  elm327.cpp  elm327.h  elm327.hpp  hardware-interface.cpp  hardware-interface.h  hardware-interface.hpp  home.cpp  home.h  home.hpp  homeview.cpp  homeview.h  logger.cpp  logger.h  logger.hpp  mainwindow.cpp  mainwindow.h  mainwindow.hpp  neonobd.cpp  neonobd.glade  neonobd_exceptions.h  neonobd_exceptions.hpp  (+27 more)
src/packaging/: CMakeLists.txt  PKGBUILD.in  cpack_install.cmake  create_arch_pkg.cmake  post_install.sh  postinst.in
src/resources/: CMakeLists.txt  app.gresource.xml  appstyle.css  bluez-agent1.xml  bluez-profile1.xml  com.github.beardedone55.neonobd.gschema.xml  compile_schema.cmake  neonobd_ui.xml
